# purify

./: AddDeps.hs  README.md  purify.cabal  stack.yaml
app/: Main.hs  PackageInfo.hs
