name:                purify
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/chrisdone/purify#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2016 Chris Done
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable purify
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       PackageInfo
  ghc-options:         -Wall -threaded -O
  build-depends:       base
                     , aeson
                     , containers
                     , directory
                     , Glob
                     , html-conduit
                     , http-conduit
                     , process
                     , text
                     , transformers
                     , xml-conduit
                     , yaml
  default-language:    Haskell2010
